[package]
name = "ayyboy"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
strip = false

[profile.dev]
opt-level = 3
debug = true
strip = false
overflow-checks = true
debug-assertions = true

[dependencies]
bitflags = "2.5.0"
datatest = "0.8.0"
dyn-clone = "1.0.17"
fern = "0.6.2"
log = { version = "0.4.21", features = ["max_level_debug", "release_max_level_warn"] }
rhai = "1.18.0"
serde_json = "1.0.117"
sdl2 = { version = "0.37.0", features = ["bundled", "static-link", "unsafe_textures"] }
spin_sleep = "1.2.0"
