[package]
name = "ayyboy"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
strip = false

[dependencies]
bitflags = "2.5.0"
datatest = "0.8.0"
dyn-clone = "1.0.17"
fern = "0.6.2"
log = "0.4.21"
rhai = "1.18.0"
serde_json = "1.0.117"
spin_sleep = "1.2.0"
snafu = "0.8.3"
eframe = "0.27.2"
